- vdi/vdi_tblit.S, vdi/vdi_tblit_cf.S: Minor addq.w fix. (VRI)
- Makefile, vdi/vdi_tblit_cf.S: Fixed missed optimization by gas on ColdFire
  from 0(sp) to simply (sp). (VRI)
- Makefile: More genericity to rebuild the ColdFire PortAsm sources. (VRI)

2011-08-31
- bdos/fsfat.c: Fixed freespace calculation. Contributed by Roger Burrows. (VRI)
- bdos/blkdev.c: Fixed Getbpb() number of clusters on MS-DOS-style partitions
  > 32MB. Contributed by Roger Burrows. (VRI)

2011-09-04
- vdi/vdi_bezier.c, vdi/vdi_col.c, vdi/vdi_control.c, vdi/vdi_defs.h,
  vdi/vdi_esc.c, vdi/vdi_fill.c, vdi/vdi_gdp.c, vdi/vdi_line.c, vdi/vdi_main.c,
  vdi/vdi_mouse.c, vdi/vdi_text.c: Added static and const where relevant.
  Contributed by Eero Tamminen. (VRI)
- desk/deskdir.c: Make EmuTOS check the "Confirm overwrites" option when copying
  a file from one directory to another. Contributed by Roger Burrows. (VRI)
- vdi/vdi_defs.h, vdi/vdi_line.c: Faster arrow drawing. Contributed by Eero
  Tamminen. (VRI)
- vdi/vdi_mouse.c: Fixed potential strict aliasing issue. Suggested by Eero
  Tamminen. (VRI)
- vdi/vdi_control.c, vdi/vdi_defs.h, vdi/vdi_fill.c, vdi/vdi_line.c,
  vdi/vdi_marker.c, vdi/vdi_mouse.c, vdi/vdi_tblit.S, vdi/vdi_tblit_cf.S: Added
  more constness. (VRI)

2011-09-05
- bdos/kpgmld.c: Make Pexec() return EPLFMT (-66) for non-executable files.
  Submitted by Roger Burrows. (VRI)
- cli/command.c: Fix output display of EmuCON "show" command to handle 10-digit
  numbers correctly. Submitted by Roger Burrows. (VRI)

2011-09-06
- bios/initinfo.c: Allow EmuTOS startup screen to display drives up to Z: rather
  than just P:. Submitted by Roger Burrows. (VRI)
- bios/blkdev.c: Fix add_partition() to set _drvbits correctly for 16 or more
  drives. Submitted by Roger Burrows. (VRI)
- desk/deskapp.c: Include all drives in the default desktop. Submitted by Roger
  Burrows. (VRI)

2011-09-07
- desk/deskpro.c: Fix erroneous test of DOS_ERR after dos_sdrv() call. Submitted
  by Roger Burrows.