@@ -2570,4 +2570,6 @@ Start... early ages
 
 2011-09-07
 - desk/deskpro.c: Fix erroneous test of DOS_ERR after dos_sdrv() call. Submitted
-  by Roger Burrows.
+  by Roger Burrows. (VRI)
+- bdos/bdosmain.c, bdos/console.c, bdos/fsio.c, bdos/proc.c, bdos/proc.h,
+  bdos/time.c: Added more static and const. Contributed by Eero Tamminen. (VRI)
